# wm_tutorial

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: basics.ipynb  eigenwatermark.ipynb  end_to_end.ipynb
scripts/: download_data.sh
wm_tutorial/: __init__.py  constants.py  tfm.py  util.py
wm_tutorial/nn/: message.py  pos_enc.py  transformer.py
